chore: refactor StripeApiController
